<resources>
    <string name="app_name" translatable="false">CityApp</string>
    <string name="company_slogan">Support Local Small Business</string>
    <string name="search_title">search</string>
    <string name="menu_change_city">Select City</string>
    <string name="menu_clear_favorites">Clear Favorites List</string>
    <string name="menu_clear_saved">Clear Saved List</string>
    <string name="menu_login">Business Owner Login</string>
    <string name="menu_about_cityapp">About CityApp</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_eula">Terms of Use</string>
    <string name="try_again_later">Sorry, Austin is currently the only city supported. Try again
        later as new cities are added!
    </string>
    <string name="dialog_dismiss">Got it!</string>
    <string name="delete_favorites_confirmation">Careful! This will clear out all of the businesses
        you have saved to your \"favorites\" list. Are you sure you want to do this?
    </string>
    <string name="delete_saved_confirmation">Careful! This will clear out all of the businesses
        you have saved for quick access. Are you sure you want to do this?
    </string>
    <string name="delete_confirm">Yes</string>
    <string name="delete_cancel">No</string>
    <string name="dialog_fragment_city_select_prompt">Choose desired city:</string>
    <string-array name="dialog_city_list">
        <item>Austin</item>
    </string-array>
    <string name="search_hint">Search by name or for products or services</string>
    <string name="business_image_content_description">Image of business</string>
    <string name="favorite_content_description">Toggle button to select business as a favorite</string>
    <string name="alert_no_connectivity">CityApp needs to get business information from the network.
        Please connect to a network.
    </string>
    <string name="alert_connectivity_dismiss">Got it!</string>
    <string name="alert_connectivity_not_again">Do not remind me again</string>
    <string name="no_results_to_show">Sorry, no results match your criteria. Please try again.</string>
    <string name="shared_element_transition">shared element transition</string>
    <string name="notification_title_one">A Special Offer Is Waiting!</string>
    <string name="notification_title_more">Special Offers Are Waiting!</string>
    <string name="notification_text_one">1 new special deal found!</string>
    <string name="notification_text_more">%1$d new special deals found!</string>
    <string name="notification_one_more">+1 additional offer</string>
    <string name="notification_more_campaigns">+%1$d additional offers</string>
    <string name="main_notification_channel_name" translatable="false">Primary</string>
    <string name="business_task_name">Business Details</string>
    <string name="detail_label_hours">Hours:</string>
    <string name="detail_label_url">Website:</string>
    <string name="detail_label_address">Address:</string>
    <string name="detail_label_phone">Phone:</string>
    <string name="detail_label_email">Email:</string>
    <string name="detail_label_awards">Awards:</string>
    <string name="detail_label_secondfilter">Genre:</string>
    <string name="detail_label_special">Special:</string>
    <string name="detail_label_type">Atmosphere:</string>
    <string name="detail_label_price">Price:</string>
    <string name="buttonbar_favorite">Favorite</string>
    <string name="buttonbar_no_campaign">No Offers Currently</string>
    <string name="buttonbar_campaign">Special Offers Now!</string>
    <string name="toast_favorite_added">Added to Favorites! You will now receive notifications from
        this business.</string>
    <string name="toast_favorite_removed">Business has been removed from your Favorites list.</string>
    <string name="button_save_business">Save</string>
    <string name="button_unsave_business">Unsave</string>
    <string name="toast_save_business">Business added to saved list!</string>
    <string name="toast_remove_saved">Business removed from saved list!</string>
    <string name="campaign_icon_content_description">Icon to indicate availability of special offers</string>
    <string name="filter_task_name">Filters</string>
    <string name="filter_preset_clear">Clear All</string>
    <string name="filter_recall_filter">Recall Filter</string>
    <string name="filter_save_filter">Save Filter</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_none_exists_toast">No filter has been saved</string>
    <string name="filter_saved_toast">Filter saved!</string>
    <string name="filter_failure_toast">CityApp encountered a fatal error (code = 101)</string>
    <string name="filter_failure_toast_2">CityApp encountered a fatal error (code = 102)</string>
    <string name="filter_preset_header">Standard Filters</string>
    <string name="filter_preset_favorites">Favorites</string>
    <string name="filter_preset_saved">Saved</string>
    <string name="filter_preset_special">Special Deals</string>
    <string-array name="filter_preset_types">
        <item>@string/filter_preset_favorites</item>
        <item>@string/filter_preset_saved</item>
        <item>@string/filter_preset_special</item>
    </string-array>
    <string name="filter_prompt">All</string>
    <string name="filter_prompt_negative">None</string>
    <string name="filter_top_level">Category Filters</string>
    <string name="entertainment_category_name">Entertainment</string>
    <string name="food_category_name">Food</string>
    <string name="health_category_name">Health</string>
    <string name="home_garden_category_name">Home and Garden</string>
    <string name="pet_category_name">Pet</string>
    <string name="retail_category_name">Retail</string>
    <string-array name="filter_categories">
        <item>@string/filter_prompt</item>
        <item>@string/entertainment_category_name</item>
        <item>@string/food_category_name</item>
        <item>@string/health_category_name</item>
        <item>@string/home_garden_category_name</item>
        <item>@string/pet_category_name</item>
        <item>@string/retail_category_name</item>
    </string-array>
    <string name="filter_second_level">Secondary Filters</string>
    <string-array name="filter_second_homeandgarden">
        <item>@string/filter_prompt</item>
        <item>Furniture</item>
        <item>Hardware</item>
        <item>Heating and Air</item>
        <item>Pool</item>
        <item>Remodeling</item>
        <item>Yard</item>
        <item>Other</item>
    </string-array>
    <string-array name="filter_second_pet">
        <item>@string/filter_prompt</item>
        <item>Groomers</item>
        <item>Resort\/Spa</item>
        <item>Supplies</item>
        <item>Veterinary</item>
        <item>Other</item>
    </string-array>
    <string-array name="filter_second_health">
        <item>@string/filter_prompt</item>
        <item>Acupuncture</item>
        <item>Beauty Salons</item>
        <item>Bowen</item>
        <item>CBD</item>
        <item>Chiropractor</item>
        <item>Dentist</item>
        <item>Dermatology</item>
        <item>Doctor</item>
        <item>Herbal Medicine</item>
        <item>Message Therapy</item>
        <item>Orthodontist</item>
        <item>Pharmacy</item>
        <item>Spa</item>
        <item>Other</item>
    </string-array>
    <string-array name="filter_second_entertainment">
        <item>@string/filter_prompt</item>
        <item>Kid Friendly</item>
        <item>Indoors</item>
        <item>Outdoors</item>
    </string-array>
    <string-array name="filter_second_food">
        <item>@string/filter_prompt</item>
        <item>American</item>
        <item>BBQ</item>
        <item>Chinese</item>
        <item>Coffee</item>
        <item>French</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Mexican</item>
        <item>Steakhouse</item>
        <item>Tex-Mex</item>
        <item>Thai</item>
        <item>Other</item>
    </string-array>
    <string-array name="filter_second_retail">
        <item>@string/filter_prompt</item>
        <item>Clothing</item>
        <item>Sporting Goods</item>
        <item>Jewelry</item>
        <item>Other</item>
    </string-array>
    <string name="filter_tertiary">Additional Options</string>
    <string name="filter_special_label">Special Considerations</string>
    <string-array name="filter_food_special">
        <item>@string/filter_prompt_negative</item>
        <item>Gluten-Free Options</item>
        <item>Locally Sourced</item>
        <item>Paleo</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
    </string-array>
    <string name="filter_atmosphere_label">Dining Atmosphere</string>
    <string-array name="filter_food_atmosphere">
        <item>@string/filter_prompt</item>
        <item>Fast</item>
        <item>Casual</item>
        <item>Upscale</item>
    </string-array>
    <string name="filter_price_label">Price</string>
    <string name="price_code_1">$ - Under $10</string>
    <string name="price_code_2">$$ - Under $25</string>
    <string name="price_code_3">$$$ - Under $50</string>
    <string name="price_code_4">$$$$ - Above $50</string>
    <string-array name="filter_food_price">
        <item>@string/filter_prompt</item>
        <item>@string/price_code_1</item>
        <item>@string/price_code_2</item>
        <item>@string/price_code_3</item>
        <item>@string/price_code_4</item>
    </string-array>
    <string name="sort_header">Sorting Options</string>
    <string name="sort_name_ascending">Business Name (ascending)</string>
    <string name="sort_name_descending">Business Name (descending)</string>
    <string-array name="sort_options">
        <item>@string/sort_name_ascending</item>
        <item>@string/sort_name_descending</item>
    </string-array>
    <string name="placeholder_name">Placeholder</string>
    <string name="about_cityapp_name">About CityApp</string>
    <string name="version_label">CityApp Version:</string>
    <string name="seascale_email_address" translatable="false">seascale_consulting_llc@gmail.com</string>
    <string name="email_invitation">Email CityApp at:</string>
    <string name="customer_teaser">List Your Business With Us!</string>
    <string name="cityapp_information_1">If you are a business owner interested in maximizing your
        marketing dollar, please send us an email at the link below and someone from our team will
        respond within two business days. We\'d love to have you on-board!
    </string>
    <string name="problem_reporting">To Report A Problem:</string>
    <string name="cityapp_information_2">CityApp supports local small businesses and thinks you
        should too! Help us to improve CityApp by sending to us your comments and suggestions. If
        you experience a crash or other performance related issue while using our app please let us
        know by sending us an email (link below). When doing so please include the following
        information:
    </string>
    <string name="enum_1" translatable="false">1)</string>
    <string name="problem_item_1">CityApp version number (listed below)</string>
    <string name="enum_2" translatable="false">2)</string>
    <string name="problem_item_2">A description of what you were doing in the app when you
        experienced the problem (e.g. \"I was performing a search for all Tex-Mex restaurants with
        vegetarian options\")
    </string>
    <string name="enum_3" translatable="false">3)</string>
    <string name="problem_item_3">A description of the problem encountered</string>
    <string name="enum_4" translatable="false">4)</string>
    <string name="problem_item_4">The manufacturer name and model of the device you are using</string>
    <string name="enum_5" translatable="false">5)</string>
    <string name="filter_location_header">Location Filters</string>
</resources>