<?xml version="1.0" encoding="utf-8"?>
<!--*******************************************************************************************
* Copyright Seascale Consulting LLC. All Rights Reserved.                                     *
*                                                                                             *
* NOTICE: This source code is protected by an End-User License Agreement (the "License").     *
* You may not use this file or its executable version except in compliance with the License.  *
* Unless required by applicable law or agreed to in writing, software distributed under the   *
* License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,   *
* either express or implied. See the License for the specific language governing permissions  *
* and limitations under the License.                                                          *
******************************************************************************************* -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_action"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="0"
        android:title="@string/search_title"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/action_select_city"
        android:title="@string/menu_change_city"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_favorites"
        android:title="@string/menu_clear_favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_saved"
        android:title="@string/menu_clear_saved"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_customer_login"
        android:title="@string/menu_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_cityapp"
        android:title="@string/menu_about_cityapp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_user_privacy"
        android:title="@string/menu_privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_user_agreement"
        android:title="@string/menu_eula"
        app:showAsAction="never" />

</menu>